# wikigraph

./: .gitignore  README.md  extract_graph.py  extract_graph_data.py  generate_graph_tool_graph.py  generate_igraph_graph.py  load_db.py  load_memgraph.py  main.py  mysql2sqlite.awk  parse_text_dump.py  process_graph.py  process_graph_graph_tool.py  pyproject.toml  render_graph.py  render_tiles.py
.zed/: settings.json
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: graph.rs  lib.rs  search.rs
offline/: build_graph_csr.py  build_search_docs.py  extract_graph.py  process_graph.py  remove_overlaps.py
offline/tiles/: metadata.py  nodes.py  palette.py
slurm/: build_graph_csr.sh  build_search_docs.sh  extract_graph.sh  process_graph.sh  render_edges.sh  render_metadata.sh  render_nodes.sh  render_tiles.sh
tiles/: common.py  edges.py  metadata.py  nodes.py  nodes_fresh.py  palette.py
worker/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc  wrangler.toml
worker/src/: index.ts
