[project]
name = "wikigraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.2",
    "igraph>=0.11.8",
    "leidenalg>=0.10.2",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "neo4j>=5.28.1",
    "numpy<2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "memray>=1.17.2",
    "ruff>=0.11.10",
    "types-lxml>=2025.3.30",
]
