[project]
name = "wikigraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "polars>=1.40.1",
    "tqdm>=4.67.3",
]
[project.optional-dependencies]
cuda13 = [
    "cugraph-cu13>=26.4.0",
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
cugraph-cu13 = { index = "nvidia" }
