[package]
name = "wikigraph-backend"
version = "0.1.0"
edition = "2021"

# Two binaries (src/bin/server.rs, src/bin/build_index.rs) share the library
# crate (src/lib.rs): graph CSR + BFS, and the Tantivy title index.

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = "1"
regex = "1"
tantivy = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
